@@ -1,12 +1,12 @@
 Package: vegan
 Title: Community Ecology Package
 Version: 1.17-0
-Date: January 2, 2010
+Date: January 7, 2010
 Author: Jari Oksanen, F. Guillaume Blanchet, Roeland Kindt, Pierre Legendre, 
    R. G. O'Hara, Gavin L. Simpson, Peter Solymos, M. Henry H. Stevens, 
    Helene Wagner  
 Maintainer: Jari Oksanen <jari.oksanen@oulu.fi>
-Suggests: MASS, mgcv, lattice, cluster, scatterplot3d, rgl, ellipse,
+Suggests: MASS, mgcv, lattice, cluster, scatterplot3d, rgl, 
   tcltk 
 Description: Ordination methods, diversity analysis and other
   functions for community and vegetation ecologists.
