@@ -7,8 +7,6 @@
 
     - Guillaume Blanchet joined the vegan team.
 
-    - vegan depends again on the ellipse package.
-
     - New functions to partition data-set diversity (gamma) into
       within-plot (alpha) and between-plot (beta) diversity
       components. Function multipart performs multiplicative
@@ -43,10 +41,6 @@
     - calibrate: calibrate is now a generic function with a new method
       calibrate.ordisurf() in addition to the old calibrate.cca. These
       find the estimates of environmental variables from ordination.
-
-    - MOStest: new function for the Mithcell-Olds & Shaw test to
-      evaluate the probability that a quadratic response has its
-      extreme value (top or bottom) at the given interval.
 
     - ordistep: stepwise selection of terms in constrained ordination
       (cca, rda and capscale) using permutation tests instead of
