@@ -10,6 +10,8 @@ Version 1.17-0 (opened January 2, 2010)
 
 	* Documented na.action in cca.object (copied from 1.18-0). 
 
+	* removed MOStest.
+
 VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-34 (closed January 2, 2010) -- (codename: Lucia)
